# clang-AST-cursor-traveler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  scread-LICENSE
.github/workflows/: clang-tidy.yml
include/: Node.hpp
lib/: CMakeLists.txt  Node.cpp
scripts/: clang_tidy_flags.py  run-clang-tidy.sh
src/: CMakeLists.txt  traveler.cpp
