CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(traveler)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

SET(MAIN_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(MAIN_INCLUDE_DIR ${MAIN_SRC_DIR}/include)
SET(MAIN_LIB_DIR ${MAIN_SRC_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(${MAIN_LIB_DIR})
ADD_SUBDIRECTORY(${MAIN_INCLUDE_DIR})
